@@ -1,5 +1,9 @@
 2002-07-16  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+	* stack.cpp: call calc_interface_fields earlier.
+
+2002-07-16  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
 	* field.h: add Poynting vector to Field.
 	* camfr_wrap.cpp: ditto.
 
